[package]
name = "Binary2Hex"
authors = ["nomoreqwerty <nomoreqwerty@tuta.io>"]
version = "0.1.0"
edition = "2021"
description = "A telegram bot for converting numbers from any number system to another number system."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9.2", features = ["full"] }
tokio = { version = "1.20.0", features = ["full"] }
single-instance = "0.3.3"
chrono = "0.4.19"
rusqlite = { version = "*", features = ["bundled"] }

[profile.release]
lto = true